# aichat-backend

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
app/: main.py
app/core/: security.py
app/core/cache/: base.py  chat.py
app/core/dependencies/connections/: base.py  cache.py  database.py  http.py
app/core/dependencies/providers/: cache.py  database.py  http.py
app/core/exceptions/: __init__.py
app/core/exceptions/v1/: auth.py  chat.py  security.py
app/core/integrations/: base.py
app/core/integrations/http/yandex_gpt/: text.py
app/core/integrations/yandex_gpt/: text.py
app/core/lifespan/: base.py
app/core/middlewares/: docs_auth.py
app/core/migrations/: env.py
app/core/migrations/versions/: 9b6a3e913e9b_add_users_and_user_settings_tables.py
app/core/settings/: logging.py  paths.py  settings.py
app/models/: __init__.py
app/models/v1/users/: settings.py  users.py
app/routes/: base.py
app/routes/v1/: api.py  chat.py
app/routes/v1/chat/: __init__.py  router.py
app/schemas/: __init__.py
app/schemas/v1/: chat.py  users.py
app/schemas/v1/chat/: chat.py
app/schemas/v1/users/: schema.py
app/services/: __init__.py
app/services/v1/: base.py  chat.py
app/services/v1/chat/: service.py
scripts/: commands.py
